modify chapter3 and additional quality changes

--- a/Files/Abstract.tex
+++ b/Files/Abstract.tex
@@ -1,3 +1,8 @@
+\paragraph{Nomenclature}
+\begin{itemize}
+\item SPI - Serial Peripheral Interface
+\end{itemize}
+\pagebreak
 \addcontentsline{toc}{section}{Abstract}
 
 \section*{Abstract}
