--- a/Files/Chapter4.tex
+++ b/Files/Chapter4.tex
@@ -1,19 +1,24 @@
 \section{Expected Outcomes}
 \begin{enumerate}
 \item A fuctional stewart platform with six degrees of freedom postioning of a model within a wind tunnel.
-\item A functional force sensor for measuring the aerodynamic load applied on a model.
-\item Obtain the aerodynamic coefficients from a test model as measured using the stewart platform load balance.
-\item Working electronic circuits used to obtain sensor measurements and relay the readings.
-\item A program used to obtain data, apply inputs to the stewart platform and process the data gathered.
+\item A functional force sensor for measuring the aerodynamic load applied on a model and calculate aerodynamic coefficients from the meaurements taken.
+\item An improved velocity measurement system for the wind tunnel using pitot tubes.
+\item A human Machine Interface with access to control  of the stewaart platform electronics and data aquisition from sensors.
 \end{enumerate}
 \newpage
 \section{Proposed Budget}
+\begin{center}
 \begin{table}[!h]
+\centering
 \includegraphics{Figures/budget}
 \caption{Proposed budget}
 \end{table}
+\end{center}
 \section{Work Plan}
+\begin{center}
 \begin{table}[!h]
-\includegraphics{Figures/workplan}
+\centering
+\includegraphics[width=0.95\linewidth]{Figures/workplan}
 \caption{Workplan table}
 \end{table}
+\end{center}
