--- a/Bib/References.bib
+++ b/Bib/References.bib
@@ -450,3 +450,12 @@
 	langid = {english},
 	file = {Iqbal et al. - 2008 - Dynamic Analysis and Robust Control Design for Ste.pdf:C\:\\Users\\earls\\Zotero\\storage\\SX4EVDBS\\Iqbal et al. - 2008 - Dynamic Analysis and Robust Control Design for Ste.pdf:application/pdf},
 }
+
+@article{smith2002creating,
+  title={Creating a Stewart Platform Model Using SimMechanics},
+  author={Smith, Natalie and Wendlandt, Jeff},
+  journal={The Matheworks—MATLAB Digest},
+  volume={10},
+  number={5},
+  year={2002}
+}
