--- a/Files/Declaration.tex
+++ b/Files/Declaration.tex
@@ -12,7 +12,7 @@ We hereby declare that the work contained in this report is original; researched
 \vspace*{.5cm}
 Approved by supervisors:
 \begin{enumerate}
-	\item Ir. Anthony K. Muchiri \vspace*{.2cm}\\
+	\item Dr. Anthony K. Muchiri \vspace*{.2cm}\\
 	Signature\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots Date\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots
 	%\item Prof. George N. Nyakoe\vspace*{.2cm}\\
 	%Signature\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots Date\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots\ldots
