--- a/Files/Chapter2.tex
+++ b/Files/Chapter2.tex
@@ -73,7 +73,7 @@ Today the largest wind tunnel in the world is the National Full-Scale Aerodynami
 \begin{figure}[!h]
 	\centering
 	\includegraphics{Figures/Fig3}
-	\caption{NASA wind tunnels used to test new airplane designs}
+	\caption[NASA Wind Tunnels]{NASA wind tunnels used to test new airplane designs}
 \end{figure}
 \end{center}
 
@@ -83,7 +83,7 @@ NASA uses wind tunnels to test scale models of aircraft and spacecraft. Wind tun
     \begin{figure}[!h]
 \centering
 \includegraphics{Figures/Fig4}
-\caption{NASA wind tunnels used to test the design of heavy-lift rocket}
+\caption[NASA Wind tunnel - space application]{NASA wind tunnels used to test the design of heavy-lift rocket}
 \end{figure}
 \end{center}
 \subsection{Force Balances}
@@ -105,7 +105,7 @@ Several different types of external force balances are available for wind tunnel
 	\begin{figure}[!h]
 	\centering
 	\includegraphics{Figures/Fig6}
-	\caption{Typical configurations for external force balances}
+	\caption[External Force balances]{Typical configurations for external force balances}
 	\end{figure}
 \end{center}
 In the wire balance, the model under testing is suspended by wires each connected to an extensometer (a sensor that produces an electrical output when submitted to a load and deforms). The shortcoming of the wire balance is the large tare drag caused by the wires which is difficult to quantify. They are also not robust nor versatile enough compared with the other alternatives. 
@@ -126,7 +126,7 @@ The different kinds of internal balances can be made based on:
 	\begin{figure}[!h]
 	\centering
 	\includegraphics{Figures/Fig7}
-	\caption{Typical configurations for internal force balances. \textit{Left to right:} Box balance and sting balance.}
+	\caption[Internal force balances]{Typical configurations for internal force balances. \textit{Left to right:} Box balance and sting balance.}
 	\end{figure}
 \end{center}
 The box balance presents a cubic shape and can either be made of a solid piece of material or from assembled parts. In this configuation, the loads are transferred from the top to the bottom. The sting balance presents a cylindrical shape and the loads are transferred from one end to the other in the longitudinal direction. It can be used to measure forces or torques.
