--- a/Files/Abstract.tex
+++ b/Files/Abstract.tex
@@ -8,17 +8,14 @@
 \section*{Abstract}
 \label{sec:Abstract}
 Obtaining and simulating the aerodynamic performance of items in a wind tunnel is a
-significant and important part of development of vehicles, aircraft and other machines
-that require aerodynamic performance evaluation. Due to the complex manoeuvres
-that may require simulation, there is a need for dynamic positioning of the model of the object in the wind tunnel. As a result, the proposal for a Stewart platform to
-replicate complex manoeuvres during wind tunnel tests as well as to position the model to
-obtain the required data.
+significant and important part in the development of vehicles, aircraft and other machines
+that require aerodynamic performance evaluation. Due to the complex maneuvers that may require simulation, there is a need for dynamic positioning of the model of the object in the wind tunnel. As a result, the proposal for a Stewart platform to replicate these complex maneuvers during wind tunnel tests as well as to position the model to obtain the required data.
 
-This project will look into the modelling, simulation and development of a Stewart
+This project will look into the modeling, simulation and development of a Stewart
 platform based force balance for a low speed wind tunnel. The project will utilize
-MATLAB/ Simulink for modelling and simulation as well as Autodesk inventor for the mechanical
+MATLAB/Simulink for modeling and simulation as well as Autodesk Inventor for the mechanical
 design. A robust control system will also be developed for the Stewart platform.
-Finally the project will be developed and tested in a wind tunnel to evaluate the performance
+Finally, models will be developed and tested in a wind tunnel to evaluate the performance
 of the platform. The force balance and platform should be able to position the test
 item and measure forces as well as calculate the aerodynamic coefficients using a bespoke computer program.
 
