--- a/Files/Introduction.tex
+++ b/Files/Introduction.tex
@@ -7,7 +7,7 @@ A Stewart platform is a six degree-of-freedom mechanism that consists of a base 
 
 The Stewart platform can be used in conjunction with wind tunnels for wind tunnel testing. Wind tunnels are used to measure the aerodynamic forces on airplanes, wings, cars, trucks, bridges, and buildings. This can be done by mounting models of these vehicles on the tunnel's mounting sting. The Stewart platform can provide various dynamic positions to simulate complex vehicle maneuvers. A force balance is incorporated to take direct measurement of forces and torques acting on the model that is being tested in the wind tunnel.
 
-For this project, the force balance is intended to be built as simple and accessible as possible. Thus, the development of a three-component balance will be considered. Several load measurement devices have to be connected to the main structure in order to measure and obtain the results and so making it fully operational. This project looks to employ electrical load measurement techniques. Strain gauges will be used.
+For this project, the force balance is intended to be built as simple and accessible as possible. Thus, the development of a three-component balance will be considered. Several load measurement devices have to be connected to the main structure in order to measure and obtain the results and so making it fully operational. This project will look to employ electrical load measurement techniques. Strain gauges will be used.
 
 \subsection{Problem Environment}
 Simulation and analysis of scaled models is an important step in the development of aircrafts, vehicles and other machines. Such analysis provides aerodynamic performance data that can be used to inform any modifications or improvements e.g. in aircrafts and vehicles to make them more efficient and safer. One such method that is used to perform aerodynamic performance evaluation is the wind tunnel, which can be low speed or high speed, used in conjunction with sensors for data acquisition by a computer. External or internal six-component force balances are also used. Another such technology that can be used for this purpose is the Stewart platform, which can be used to predict behavior of vehicles and aircrafts in the actual environment.
