--- a/Bib/References.bib
+++ b/Bib/References.bib
@@ -451,11 +451,10 @@
 	file = {Iqbal et al. - 2008 - Dynamic Analysis and Robust Control Design for Ste.pdf:C\:\\Users\\earls\\Zotero\\storage\\SX4EVDBS\\Iqbal et al. - 2008 - Dynamic Analysis and Robust Control Design for Ste.pdf:application/pdf},
 }
 
-@article{smith2002creating,
-  title={Creating a Stewart Platform Model Using SimMechanics},
-  author={Smith, Natalie and Wendlandt, Jeff},
-  journal={The Matheworks—MATLAB Digest},
-  volume={10},
-  number={5},
-  year={2002}
+@online{NASA,
+  author = {F. Wild},
+  title = {{NASA} What are wind tunnels},
+  year = 2022,
+  url = {https://www.nasa.gov/audience/forstudents/k-4/stories/nasa-knows/what-are-wind-tunnels-k4.html},
+  urldate = {29-Apr-2015}
 }
