--- a/Files/Chapter2.tex
+++ b/Files/Chapter2.tex
@@ -23,7 +23,7 @@ the whole system. There will be no bending moments in any of the members apart f
 	\begin{figure}[!h]
 	\centering
 	\includegraphics[width=0.6\linewidth]{Figures/Fig11}
-	\caption{Linear co-ordinate control}
+	\caption[Linear co-ordinate control]{Linear co-ordinate control \cite{stewart1965platform}}
 	\end{figure}
 \end{center}
 
@@ -59,7 +59,7 @@ lift and drag forces could be read. The wind tunnel was powered by a fan driven 
 	\begin{figure}[!h]
 	\centering
 	\includegraphics[width=0.75\linewidth]{Figures/Fig2}
-	\caption{Diagram of a typical wind tunnel}
+	\caption[A Typical Wind Tunnel]{Diagram of a typical wind tunnel}
 	\end{figure}
 \end{center}
 
