--- a/Files/Chapter2.tex
+++ b/Files/Chapter2.tex
@@ -59,7 +59,7 @@ lift and drag forces could be read. The wind tunnel was powered by a fan driven 
 	\begin{figure}[!h]
 	\centering
 	\includegraphics[width=0.75\linewidth]{Figures/Fig2}
-	\caption[A Typical Wind Tunnel]{Diagram of a typical wind tunnel}
+	\caption[A Typical Wind Tunnel]{Diagram of a typical wind tunnel \cite{morris_force_2010}}
 	\end{figure}
 \end{center}
 
@@ -68,7 +68,7 @@ Later in the early 20th century in Europe, the main users of wind tunnels were G
 By the 1940’s supersonic wind tunnels were in use. In 1972 a cryogenic wind tunnel was built at NASA Langley by injecting liquid nitrogen into the wind tunnel to cool the gas. This lowered the viscosity and increased the Reynolds number, and this tunnel had the capability to match Reynolds and Mach numbers simultaneously up to Mach 1.2
 \cite{fernandes_design_nodate}.
 
-Today the largest wind tunnel in the world is the National Full-Scale Aerodynamics Complex at NASA's Ames Research Center, which has a test section of cross-section 80 ft by 100 ft (24 m x 31 m). The types of instruments in common use in wind tunnels include boundary layer rakes, tufts, pitot tubes, pressure sensitive paint, smoke, and static pressure taps.
+Today the largest wind tunnel in the world is the National Full-Scale Aerodynamics Complex at NASA's Ames Research Center, which has a test section of cross-section 80 ft by 100 ft (24 m x 31 m). The types of instruments in common use in wind tunnels include boundary layer rakes, tufts, pitot tubes, pressure sensitive paint, smoke, and static pressure taps \cite{morris_force_2010}.
 \begin{center}
 \begin{figure}[!h]
 	\centering
