--- a/Files/Chapter2.tex
+++ b/Files/Chapter2.tex
@@ -73,17 +73,17 @@ Today the largest wind tunnel in the world is the National Full-Scale Aerodynami
 \begin{figure}[!h]
 	\centering
 	\includegraphics{Figures/Fig3}
-	\caption[NASA Wind Tunnels]{NASA wind tunnels used to test new airplane designs}
+	\caption[NASA Wind Tunnels]{NASA wind tunnels used to test new airplane designs \cite{NASA}}
 \end{figure}
 \end{center}
 
-NASA uses wind tunnels to test scale models of aircraft and spacecraft. Wind tunnels help NASA to test ideas of making airplanes better and safer. They are also used to help engineers in designing spacecraft that will work in other planets such as mars - the wind tunnel can be used to simulate objects in an atmosphere that's thinner than ours e.g. an atmosphere that's exactly like the Martian atmosphere. NASA has wind tunnels of different types and sizes. Some are low-speed wind tunnels, others are hypersonic i.e. they are made to carry out tests at 4,000 mph (6437 kph).
+NASA uses wind tunnels to test scale models of aircraft and spacecraft. Wind tunnels help NASA to test ideas of making airplanes better and safer. They are also used to help engineers in designing spacecraft that will work in other planets such as mars - the wind tunnel can be used to simulate objects in an atmosphere that's thinner than ours e.g. an atmosphere that's exactly like the Martian atmosphere. NASA has wind tunnels of different types and sizes. Some are low-speed wind tunnels, others are hypersonic i.e. they are made to carry out tests at 4,000 mph (6437 kph) \cite{NASA}.
 \begin{center}
      %&\vspace*{-4.0cm}
     \begin{figure}[!h]
 \centering
 \includegraphics{Figures/Fig4}
-\caption[NASA Wind tunnel - space application]{NASA wind tunnels used to test the design of heavy-lift rocket}
+\caption[NASA Wind tunnel - space application]{NASA wind tunnels used to test the design of heavy-lift rocket \cite{NASA}}
 \end{figure}
 \end{center}
 \subsection{Force Balances}
@@ -105,7 +105,7 @@ Several different types of external force balances are available for wind tunnel
 	\begin{figure}[!h]
 	\centering
 	\includegraphics{Figures/Fig6}
-	\caption[External Force balances]{Typical configurations for external force balances}
+	\caption[External Force balances]{Typical configurations for external force balances \cite{ferreira2015design}}
 	\end{figure}
 \end{center}
 In the wire balance, the model under testing is suspended by wires each connected to an extensometer (a sensor that produces an electrical output when submitted to a load and deforms). The shortcoming of the wire balance is the large tare drag caused by the wires which is difficult to quantify. They are also not robust nor versatile enough compared with the other alternatives. 
@@ -146,7 +146,7 @@ Metal foil strain gauges are widely used. This type of strain gauge provide more
 		\begin{figure}[!h]
 		\centering
 		\includegraphics[width=0.6\linewidth]{Figures/Fig9}
-		\caption{Wheatstone Bridge Circuit}
+		\caption[Wheatstone Bridge Circuit]{Wheatstone Bridge Circuit \cite{ferreira2015design}}
 		\end{figure}
 \end{center}
 Load cells can also be used to measure the drag and lift forces.
