--- a/Bib/References.bib
+++ b/Bib/References.bib
@@ -458,3 +458,14 @@
   url = {https://www.nasa.gov/audience/forstudents/k-4/stories/nasa-knows/what-are-wind-tunnels-k4.html},
   urldate = {29-Apr-2015}
 }
+
+@article{caleb,
+  title={Design and fabrication of a force balance system for a low speed wind tunnel},
+  author={Soi},
+  journal={Mechatronic department JKUAT},
+  volume={1},
+  number={15},
+  pages={1-67},
+  year={2021},
+  publisher={JKUAT}
+}
