--- a/Files/Chapter2.tex
+++ b/Files/Chapter2.tex
@@ -162,3 +162,10 @@ Angle of attack (\textalpha)- angle measured between the longitudinal axis of th
 	\end{figure}
 \end{center}
 \subsection{Summary of Gaps}
+With so much research in the area of Stewart platform, there remains still more work to be done in the areas of force control, dynamics, and singular positions. A 6 DOF Stewart platform with force measurement for a lowspeed wind tunnel has been done as final year project in JKUAT under the department of Mechatronic Engineering. Whereas the former team was able to successfully design and assemble the platform, as well as the actuatuation circuitry, there still remains work to do in the following areas \cite{caleb}:
+\begin{enumerate}
+\item Development of a Human-Machine-Interface for Stewart platform control.
+\item Data acquisition from sensors.
+\item Implementation of servo circuit control.
+\item Calibration of the measurement system to be in-line with NASA airfoils.
+\end{enumerate}
