--- a/Files/Abstract.tex
+++ b/Files/Abstract.tex
@@ -1,5 +1,9 @@
 \paragraph{Nomenclature}
 \begin{itemize}
+\item DAQA - Data Acquisition System
+\item DOF - Degrees of Freedom
+\item JKUAT - Jomo Kenyatta University of Agriculture and Technology
+\item NASA - National Space Agency
 \item SPI - Serial Peripheral Interface
 \end{itemize}
 \pagebreak
