fix(chapter 2) error in fig 2.8

--- a/Files/Chapter2.tex
+++ b/Files/Chapter2.tex
@@ -158,7 +158,7 @@ Angle of attack (\textalpha)- angle measured between the longitudinal axis of th
 	\begin{figure}[!h]
 	\centering
 	\includegraphics[width=0.6\linewidth]{Figures/Fig10}
-	\caption[]Angle of attack]{Angle of attack (\textalpha) \cite{ferreira2015design}}
+	\caption[Angle of attack]{Angle of attack (\textalpha) \cite{ferreira2015design}}
 	\end{figure}
 \end{center}
 \subsection{Summary of Gaps}
