--- a/Bib/References.bib
+++ b/Bib/References.bib
@@ -469,3 +469,12 @@
   year={2021},
   publisher={JKUAT}
 }
+
+@article{smith2002creating,
+  title={Creating a Stewart Platform Model Using SimMechanics},
+  author={Smith, Natalie and Wendlandt, Jeff},
+  journal={The Matheworks—MATLAB Digest},
+  volume={10},
+  number={5},
+  year={2002}
+}
