Ready to submit

--- a/Files/Chapter3.tex
+++ b/Files/Chapter3.tex
@@ -241,3 +241,11 @@ The general layout is as shown in the figure below:
 The primary interface between the microcontroller is via serial interface by use of USB. This is used due to wide availability and integration on many personal computers. Serial communication allows for bidirectional transfer of information thus allowing for both control input and output of measured values. The interface is to enable the abstraction of data aquisition and actuator control to a simple interaction with buttons and other visual interfaces available in a computer program.
 
 The decoupling of the microcontroller and the program to be hosted on the desktop allows for advanced data processing such as application of filters and resolving measurements into useable information. It also allows for the use of more powerful processor and high level programmming languages to more effectively perform complex calculations without taking a toll the sensor samping rate that would occur with onboard processing in the microcontroller.
+\newpage
+\begin{center}
+	\begin{figure}[!h]
+	\centering
+	\includegraphics[width=0.7\linewidth]{Figures/Fig14}
+	\caption[Control Algorithim]{Control Algorithim for the Stewart Platform with Force Measurement}
+	\end{figure}
+\end{center}
